--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb+srv://Fadhelali:Fadhel1416@cluster0.cp4ra.mongodb.net/RestApi?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://<username>:<password>@cluster0.cp4ra.mongodb.net/<databasename>?retryWrites=true&w=majority
